Prevent links within alert messages from wrapping

--- a/public/_assets/scss/global.scss
+++ b/public/_assets/scss/global.scss
@@ -17,6 +17,10 @@
   -webkit-hyphens: none;
 }
 
+#alertMessage a {
+  white-space: nowrap;
+}
+
 .emailAddress,
 .emailAddress a {
   font-size: small;
